bin_PROGRAMS= $(top_builddir)/bin/stackTest.out


__top_builddir__bin_stackTest_out_SOURCES=	opcuaServer.c\
											opcua_builtInDatatypes.c\
											opcua_binaryEncDec.c\
											opcua_transportLayer.c\
											opcua_builtInDatatypes.h\
											opcua_binaryEncDec.h\
											opcua_transportLayer.h\
											opcua_advancedDatatypes.h\
											opcua_types.h\
											opcua_connectionHelper.h\
											tcp_layer.h
