




#__top_builddir__bin_stackTest_out_SOURCES =	opcuaServer.c\
#											opcua_builtInDatatypes.c\
#											opcua_binaryEncDec.c\
#											opcua_transportLayer.c\
#											opcua_builtInDatatypes.h\
#											opcua_binaryEncDec.h\
#											opcua_transportLayer.h\
#											opcua_advancedDatatypes.h\
#											opcua_types.h\
#											opcua_connectionHelper.h\
#											tcp_layer.h

#lib_LTLIBRARIES = libstack.la
#libstack_la_SOURCES = opcua_transportLayer.c\
#					  opcua_transportLayer.h\
#					  opcua_advancedDatatypes.h\
#					  opcua_connectionHelper.h	
noinst_LTLIBRARIES =$(top_builddir)/bin/libOpen62541.la
__top_builddir__bin_libOpen62541_la_SOURCES = 	opcua_builtInDatatypes.c\
						opcua_binaryEncDec.c\
						opcua_transportLayer.c\
						opcua_encodingLayer.c\
						opcua_builtInDatatypes.h\
						opcua_binaryEncDec.h\
						opcua_transportLayer.h\
						opcua_advancedDatatypes.h\
						opcua_types.h\
						opcua_connectionHelper.h\
						opcua_encodingLayer.h\
						tcp_layer.h

#bin_PROGRAMS= $(top_builddir)/bin/open62541.out
#__top_builddir__bin_libOpen62541_out_SOURCES = opcuaServer.c
#libOpen62541_la_LIBADD = ../lib/libOpen62541.la		  										

